make CircleCI push artifacts to S3

--- a/circle.yml
+++ b/circle.yml
@@ -19,6 +19,7 @@ dependencies:
     override:
         - pip install -r server/requirements.txt
         - pip install -r server/requirements_dev.txt
+        - pip install awscli
         - 'npm prune && npm install':
             pwd:
                 client
@@ -43,7 +44,7 @@ test:
         - 'echo "${CIRCLE_BUILD_NUM}" > build_number.txt':
             parallel: true
             pwd: server
-        - 'if [[ "$CIRCLE_NODE_INDEX" == "0" ]]; then tar -pc * -zf ../server.tar.gz; fi':
+        - 'if [[ "$CIRCLE_NODE_INDEX" == "0" ]]; then tar -pc * -zf $CIRCLE_ARTIFACTS/server.tar.gz; ./scripts/push_artifact_to_s3.sh $CIRCLE_ARTIFACTS/server.tar.gz; fi':
             parallel: true
             pwd: server
         - 'if [[ "$CIRCLE_NODE_INDEX" == "1" ]]; then tar -pc dist/ ../server/static -zf $CIRCLE_ARTIFACTS/client.tar.gz; else export; fi':
