--- a/circle.yml
+++ b/circle.yml
@@ -44,7 +44,7 @@ test:
         - 'echo "${CIRCLE_BUILD_NUM}" > build_number.txt':
             parallel: true
             pwd: server
-        - 'if [[ "$CIRCLE_NODE_INDEX" == "0" ]]; then tar -pc * -zf $CIRCLE_ARTIFACTS/server.tar.gz; ./scripts/push_artifact_to_s3.sh $CIRCLE_ARTIFACTS/server.tar.gz; fi':
+        - 'if [[ "$CIRCLE_NODE_INDEX" == "0" ]]; then tar -pc * -zf $CIRCLE_ARTIFACTS/server.tar.gz; ../scripts/push_artifact_to_s3.sh $CIRCLE_ARTIFACTS/server.tar.gz; fi':
             parallel: true
             pwd: server
         - 'if [[ "$CIRCLE_NODE_INDEX" == "1" ]]; then tar -pc dist/ ../server/static -zf $CIRCLE_ARTIFACTS/client.tar.gz; else export; fi':
