--- a/server/actionlog/fixtures/test_api.yaml
+++ b/server/actionlog/fixtures/test_api.yaml
@@ -293,6 +293,12 @@
         ad_group_name: 'AdGroup name'
         start_date: '2015-03-02'
         end_date: '2015-04-02'
+        enable_ga_tracking: True
+        enable_adobe_tracking: True
+        adobe_tracking_param: 'pid'
+        autopilot_state: 1
+        autopilot_daily_budget: '50.0000'
+        retargeting_ad_groups: [3]
     model: dash.adgroupsettings
     pk: 1
 
