--- a/server/actionlog/fixtures/test_api.yaml
+++ b/server/actionlog/fixtures/test_api.yaml
@@ -58,6 +58,7 @@
         users: [1, 2, 3]
         allowed_sources: [1,2,3,4,5,6,7,8,9]
         name: 'test account 1 Čžš'
+        uses_credits: False
     model: dash.account
     pk: 1
 
