--- a/server/dash/fixtures/test_views.yaml
+++ b/server/dash/fixtures/test_views.yaml
@@ -55,6 +55,7 @@
         modified_dt: '2014-06-04T09:58:21'
         modified_by: 1
         name: 'test account 1'
+        uses_credits: False
         users: [1, 2, 3]
     model: dash.account
     pk: 1
