--- a/server/automation/fixtures/test_automation.yaml
+++ b/server/automation/fixtures/test_automation.yaml
@@ -21,7 +21,6 @@
     modified_dt: '2014-06-04T09:58:21'
     modified_by: 1
     name: 'Test Account 1'
-    uses_credits: False
   model: dash.account
   pk: 1
 
@@ -30,7 +29,6 @@
     modified_dt: '2014-06-04T09:58:21'
     modified_by: 1
     name: 'Test Account 2 (BCM)'
-    uses_credits: true
   model: dash.account
   pk: 2
 
@@ -304,7 +302,7 @@
     created_dt: '2014-06-04T09:58:21'
     modified_dt: '2014-06-04T09:58:21'
     created_by: 1
-    account: 2
+    account: 1
     start_date: '2014-06-01'
     end_date: '2016-01-01'
     amount: 100000
@@ -314,7 +312,48 @@
   model: dash.creditlineitem
   pk: 1
 
+- fields:
+    created_dt: '2014-06-04T09:58:21'
+    modified_dt: '2014-06-04T09:58:21'
+    created_by: 1
+    account: 2
+    start_date: '2014-06-01'
+    end_date: '2016-01-01'
+    amount: 100000
+    license_fee: 0.1
+    status: 2
+    comment: 'Test credit'
+  model: dash.creditlineitem
+  pk: 2
+
 # Budget line items
+
+- fields:
+    created_dt: '2014-06-04T09:58:21'
+    modified_dt: '2014-06-04T09:58:21'
+    created_by: 1
+    credit: 1 # test credit 1
+    campaign: 1
+    start_date: '2014-06-01'
+    end_date: '2016-01-01'
+    amount: 100
+    comment: 'Test case'
+  model: dash.budgetlineitem
+  pk: 1
+
+- fields:
+    created_dt: '2014-06-04T09:58:21'
+    modified_dt: '2014-06-04T09:58:21'
+    created_by: 1
+    credit: 1 # test credit 1
+    campaign: 2
+    start_date: '2014-06-01'
+    end_date: '2016-01-01'
+    amount: 100
+    comment: 'Test case'
+  model: dash.budgetlineitem
+  pk: 2
+
 
 - fields:
     created_dt: '2014-06-04T09:58:21'
@@ -327,7 +366,7 @@
     amount: 50000
     comment: 'Test case'
   model: dash.budgetlineitem
-  pk: 1
+  pk: 3
 
 - fields:
     created_dt: '2014-06-04T09:58:21'
@@ -340,13 +379,13 @@
     amount: 50000
     comment: 'Test case'
   model: dash.budgetlineitem
-  pk: 2
+  pk: 4
 
 # Daily statements
 
 - fields:
     date: '2014-06-04'
-    budget: 1
+    budget: 3
     media_spend_nano: 50000000000
     data_spend_nano: 0
     license_fee_nano: 5000000000
@@ -355,7 +394,7 @@
 
 - fields:
     date: '2014-06-03'
-    budget: 1
+    budget: 3
     media_spend_nano: 60000000000
     data_spend_nano: 0
     license_fee_nano: 6000000000
@@ -364,9 +403,18 @@
 
 - fields:
     date: '2014-06-04'
-    budget: 2
+    budget: 4
     media_spend_nano: 70000000000
     data_spend_nano: 0
     license_fee_nano: 7000000000
   model: reports.budgetdailystatement
   pk: 3
+
+- fields:
+    date: '2014-06-04'
+    budget: 1
+    media_spend_nano: 900000000000
+    data_spend_nano: 0
+    license_fee_nano: 10000000000
+  model: reports.budgetdailystatement
+  pk: 4
