--- a/server/dash/fixtures/test_views.yaml
+++ b/server/dash/fixtures/test_views.yaml
@@ -55,7 +55,6 @@
         modified_dt: '2014-06-04T09:58:21'
         modified_by: 1
         name: 'test account 1'
-        uses_credits: False
         users: [1, 2, 3]
     model: dash.account
     pk: 1
@@ -189,6 +188,38 @@
         created_dt: '2015-09-23T09:57:22'
     model: dash.campaignbudgetsettings
     pk: 1
+
+# test creditlineitems
+
+-   fields:
+        created_dt: '2014-06-04T09:58:21'
+        modified_dt: '2014-06-04T09:58:21'
+        created_by: 1
+        account: 1 # test account 1
+        start_date: '2016-01-01'
+        end_date: '2016-01-31'
+        amount: 1000
+        license_fee: 0.2
+        status: 2
+        comment: 'Test case'
+    model: dash.creditlineitem
+    pk: 1
+
+# test budgetlineitems
+
+-   fields:
+        created_dt: '2014-06-04T09:58:21'
+        modified_dt: '2014-06-04T09:58:21'
+        created_by: 1
+        credit: 1 # test credit 1
+        campaign_id: 1 # test campaign 1
+        start_date: '2016-01-01'
+        end_date: '2016-01-31'
+        amount: 1000
+        comment: 'Test case'
+    model: dash.budgetlineitem
+    pk: 1
+
 
 # test uploadbatch
 
