--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -41,3 +41,6 @@ django-import-export==0.2.8
 
 # for accessing Google Analytics
 google-api-python-client==1.4.2
+
+# for secrets encryption
+secretcrypt==0.4.1
