--- a/server/automation/fixtures/test_automation.yaml
+++ b/server/automation/fixtures/test_automation.yaml
@@ -125,6 +125,7 @@
     state: 1
     cpc_cc: 100.00
     autopilot_state: 1
+    autopilot_daily_budget: 10
   model: dash.adgroupsettings
   pk: 1
 
@@ -134,6 +135,7 @@
     created_by: 1
     state: 2
     autopilot_state: 2
+    autopilot_daily_budget: 20
   model: dash.adgroupsettings
   pk: 2
 
@@ -143,6 +145,7 @@
     created_by: 1
     state: 1
     autopilot_state: 3
+    autopilot_daily_budget: 30
   model: dash.adgroupsettings
   pk: 3
 
@@ -152,6 +155,7 @@
     created_by: 1
     state: 1
     autopilot_state: 1
+    autopilot_daily_budget: 40
   model: dash.adgroupsettings
   pk: 4
 
