--- a/server/server/localsettings.py.template
+++ b/server/server/localsettings.py.template
@@ -71,8 +71,8 @@ LOG_FILE = '/path/to/log.log'
 STATSD_HOST = 'localhost'
 STATSD_PORT = 8125
 
-TELEGRAF_HOST = ''
-TELEGRAF_PORT = 8135
+STATSD_INFLUX_HOST = ''
+STATSD_INFLUX_PORT = 8135
 
 # Saucelabs
 SAUCELABS_USERNAME = ''
