refactore retargeting setting so it is now tied to source instead of source type

--- a/server/actionlog/fixtures/test_api.yaml
+++ b/server/actionlog/fixtures/test_api.yaml
@@ -272,6 +272,7 @@
         maintenance: false
         bidder_slug: 'sharethrough'
         content_ad_submission_type: 1
+        supports_retargeting: true
     model: dash.source
     pk: 9
 
