--- a/server/dash/fixtures/test_models.yaml
+++ b/server/dash/fixtures/test_models.yaml
@@ -121,6 +121,9 @@
         name: AdBlade
         source_type: 1
         supports_retargeting: true
+        default_cpc_cc: 0.11
+        default_mobile_cpc_cc: 0.12
+        default_daily_budget_cc: 10
     model: dash.source
     pk: 1
 
@@ -140,9 +143,6 @@
 -   fields:
         source: 1
         credentials: 1
-        default_cpc_cc: 0.11
-        mobile_cpc_cc: 0.12
-        daily_budget_cc: 10
     model: dash.defaultsourcesettings
     pk: 1
 
