Removed duplicate .get() call

--- a/server/server/localsettings.py.template
+++ b/server/server/localsettings.py.template
@@ -154,7 +154,7 @@ Z3_API_THUMBNAIL_URL = ''
 # QUEUES
 BROKER_TRANSPORT = 'sqs'
 BROKER_USER = AWS_ACCESS_KEY_ID
-BROKER_PASSWORD = AWS_SECRET_ACCESS_KEY.get()
+BROKER_PASSWORD = AWS_SECRET_ACCESS_KEY
 
 BROKER_URL = BROKER_TRANSPORT + '://' + BROKER_USER + ':' + BROKER_PASSWORD + '@'
 
