--- a/server/server/localsettings.py.template
+++ b/server/server/localsettings.py.template
@@ -148,8 +148,8 @@ CACHES = {
 USE_HASH_CACHE = False
 HASH_CACHE_TTL = 24 * 60 * 60
 
-Z3_API_IMAGE_URL = ''
-Z3_API_THUMBNAIL_URL = ''
+IMAGE_ORIGINAL_URL = ''
+IMAGE_THUMBNAIL_URL = ''
 
 # QUEUES
 BROKER_TRANSPORT = 'sqs'
