Added tests for dash.models.get_image_url and several other small improvements.

--- a/server/server/localsettings.py.template
+++ b/server/server/localsettings.py.template
@@ -148,7 +148,7 @@ CACHES = {
 USE_HASH_CACHE = False
 HASH_CACHE_TTL = 24 * 60 * 60
 
-IMAGE_ORIGINAL_URL = ''
+Z3_API_IMAGE_URL = ''
 IMAGE_THUMBNAIL_URL = ''
 
 # QUEUES
