Calculate new daily budgets and propagate them for campaings in landing

--- a/server/automation/fixtures/test_campaign_stop.yaml
+++ b/server/automation/fixtures/test_campaign_stop.yaml
@@ -135,7 +135,7 @@
     created_dt: '2014-06-04T09:58:21'
     modified_dt: '2014-06-04T09:58:21'
     modified_by: 1
-    campaign: 2
+    campaign: 1
     name: 'Test AdGroup 2'
   model: dash.adgroup
   pk: 2
@@ -144,10 +144,28 @@
     created_dt: '2014-06-04T09:58:21'
     modified_dt: '2014-06-04T09:58:21'
     modified_by: 1
-    campaign: 3
+    campaign: 1
     name: 'Test AdGroup 3'
   model: dash.adgroup
   pk: 3
+
+- fields:
+    created_dt: '2014-06-04T09:58:21'
+    modified_dt: '2014-06-04T09:58:21'
+    modified_by: 1
+    campaign: 2
+    name: 'Test AdGroup 4'
+  model: dash.adgroup
+  pk: 4
+
+- fields:
+    created_dt: '2014-06-04T09:58:21'
+    modified_dt: '2014-06-04T09:58:21'
+    modified_by: 1
+    campaign: 3
+    name: 'Test AdGroup 5'
+  model: dash.adgroup
+  pk: 5
 
 
 - fields:
@@ -155,9 +173,9 @@
     modified_dt: '2014-06-04T09:58:21'
     modified_by: 1
     campaign: 4
-    name: 'Test AdGroup 4'
+    name: 'Test AdGroup 6'
   model: dash.adgroup
-  pk: 4
+  pk: 6
 
 
 # Ad Group Settings
@@ -184,19 +202,21 @@
     created_dt: '2016-02-29T09:58:21'
     created_by: 1
     state: 1
+    cpc_cc: 100.00
   model: dash.adgroupsettings
   pk: 3
 
 - fields:
-    ad_group_id: 2
-    created_dt: '2016-02-29T21:58:21'
+    ad_group_id: 3
+    created_dt: '2016-02-29T09:58:21'
     created_by: 1
     state: 2
+    cpc_cc: 100.00
   model: dash.adgroupsettings
   pk: 4
 
 - fields:
-    ad_group_id: 3
+    ad_group_id: 4
     created_dt: '2016-02-29T09:58:21'
     created_by: 1
     state: 1
@@ -204,30 +224,46 @@
   pk: 5
 
 - fields:
-    ad_group_id: 3
-    created_dt: '2016-03-01T09:58:21'
+    ad_group_id: 4
+    created_dt: '2016-02-29T21:58:21'
     created_by: 1
     state: 2
   model: dash.adgroupsettings
   pk: 6
 
 - fields:
-    ad_group_id: 4
+    ad_group_id: 5
+    created_dt: '2016-02-29T09:58:21'
+    created_by: 1
+    state: 1
+  model: dash.adgroupsettings
+  pk: 7
+
+- fields:
+    ad_group_id: 5
+    created_dt: '2016-03-01T09:58:21'
+    created_by: 1
+    state: 2
+  model: dash.adgroupsettings
+  pk: 8
+
+- fields:
+    ad_group_id: 6
     created_dt: '2016-02-28T09:58:21'
     created_by: 1
     state: 1
     end_date: null
   model: dash.adgroupsettings
-  pk: 7
+  pk: 9
 
 - fields:
-    ad_group_id: 4
+    ad_group_id: 6
     created_dt: '2016-02-29T09:58:21'
     created_by: 1
     state: 1
     end_date: '2016-02-29'
   model: dash.adgroupsettings
-  pk: 8
+  pk: 10
 
 # Source Types
 -   fields:
@@ -343,6 +379,20 @@
   model: dash.adgroupsource
   pk: 5
 
+- fields:
+    source: 1
+    ad_group: 2
+    source_campaign_key: '["fake"]'
+  model: dash.adgroupsource
+  pk: 6
+
+- fields:
+    source: 2
+    ad_group: 3
+    source_campaign_key: '["fake"]'
+  model: dash.adgroupsource
+  pk: 7
+
 # Ad Group Source Settings
 - fields:
     created_dt: '2016-02-29T09:00:00'
@@ -451,6 +501,24 @@
     state: 1
   model: dash.adgroupsourcesettings
   pk: 12
+
+- fields:
+    created_dt: '2016-02-29T16:00:00'
+    ad_group_source: 6
+    cpc_cc: '0.12'
+    daily_budget_cc: '80.00'
+    state: 1
+  model: dash.adgroupsourcesettings
+  pk: 13
+
+- fields:
+    created_dt: '2016-02-29T16:00:00'
+    ad_group_source: 7
+    cpc_cc: '0.06'
+    daily_budget_cc: '40.00'
+    state: 1
+  model: dash.adgroupsourcesettings
+  pk: 14
 
 # Credit line items
 - fields:
@@ -586,6 +654,19 @@
     comment: 'Test budget 8'
   model: dash.budgetlineitem
   pk: 8
+
+- fields:
+    created_dt: '2016-01-01T00:00:07'
+    modified_dt: '2016-01-01T00:00:07'
+    created_by: 1
+    credit: 2 # test credit 2
+    campaign: 1
+    start_date: '2016-04-16'
+    end_date: '2016-04-16'
+    amount: 370
+    comment: 'Test budget 8'
+  model: dash.budgetlineitem
+  pk: 9
 
 # Daily statements
 
