--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,14 +13,17 @@
 set $mod Mod1
 
 # have some gnome goodness
-exec /usr/libexec/gnome-settings-daemon
+exec --no-startup-id /usr/libexec/gnome-settings-daemon
+
+# notification daemon
+exec --no-startup-id dunst
 
 # ssh agent
-exec ssh-add
+exec --no-startup-id ssh-add
 
 #exec compton -bCG  # too much battery drain
 
-exec setxkbmap -option ctrl:swapcaps
+exec --no-startup-id setxkbmap -option ctrl:swapcaps
 
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 1 +5% #increase sound volume
@@ -28,8 +31,8 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 1 -5% #d
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 1 toggle # mute sound
 
 # Sreen brightness controls
-bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
+bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 20 # increase screen brightness
+bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 20 # decrease screen brightness
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
