--- a/server/automation/fixtures/test_campaign_stop.yaml
+++ b/server/automation/fixtures/test_campaign_stop.yaml
@@ -70,15 +70,6 @@
   model: dash.campaign
   pk: 5
 
-- fields:
-    created_dt: '2014-06-04T09:58:21'
-    modified_dt: '2014-06-04T09:58:21'
-    modified_by: 1
-    account: 1
-    name: 'Test Campaign 6'
-  model: dash.campaign
-  pk: 6
-
 # Campaign Settings
 - fields:
     created_dt: '2014-06-04T09:58:21'
@@ -129,28 +120,6 @@
     automatic_campaign_stop: True
   model: dash.campaignsettings
   pk: 5
-
-- fields:
-    created_dt: '2014-06-04T09:58:21'
-    created_by_id: 1
-    name: 'Campaign Settings 6'
-    campaign_manager: 1
-    campaign: 6
-    automatic_campaign_stop: True
-  model: dash.campaignsettings
-  pk: 6
-
-- fields:
-    created_dt: '2016-02-29T12:00:00'
-    created_by: null
-    system_user: 1
-    name: 'Campaign Settings 7'
-    campaign_manager: 1
-    campaign: 6
-    automatic_campaign_stop: True
-    landing_mode: True
-  model: dash.campaignsettings
-  pk: 7
 
 # Ad Groups
 - fields:
@@ -206,15 +175,6 @@
     name: 'Test AdGroup 6'
   model: dash.adgroup
   pk: 6
-
-- fields:
-    created_dt: '2014-06-04T09:58:21'
-    modified_dt: '2014-06-04T09:58:21'
-    modified_by: 1
-    campaign: 6
-    name: 'Test AdGroup 7'
-  model: dash.adgroup
-  pk: 7
 
 # Ad Group Settings
 - fields:
@@ -282,51 +242,14 @@
     created_dt: '2016-03-01T09:58:21'
     created_by: 1
     state: 2
+
   model: dash.adgroupsettings
   pk: 8
-
-- fields:
-    ad_group_id: 7
-    created_dt: '2016-02-28T09:58:21'
-    created_by: 1
-    state: 1
-    end_date: null
-  model: dash.adgroupsettings
-  pk: 9
-
-- fields:
-    ad_group_id: 7
-    created_dt: '2016-02-29T09:58:21'
-    created_by: 1
-    state: 1
-    end_date: '2016-02-29'
-  model: dash.adgroupsettings
-  pk: 10
-
-- fields:
-    ad_group_id: 7
-    created_dt: '2014-06-04T09:57:21'
-    created_by: 1
-    state: 1
-    end_date: '2016-12-31'
-  model: dash.adgroupsettings
-  pk: 10
-
-- fields:
-    ad_group_id: 7
-    created_dt: '2016-02-29T12:00:00'
-    created_by: null
-    system_user: 1
-    state: 1
-    end_date: '2016-12-31'
-    landing_mode: True
-  model: dash.adgroupsettings
-  pk: 11
-
 # Source Types
 -   fields:
         type: 'adblade'
         available_actions: [7] # set end date
+        min_daily_budget: 5.00
     model: dash.sourcetype
     pk: 1
 
@@ -725,6 +648,33 @@
     comment: 'Test budget 8'
   model: dash.budgetlineitem
   pk: 9
+
+- fields:
+    created_dt: '2016-01-01T00:00:07'
+    modified_dt: '2016-01-01T00:00:07'
+    created_by: 1
+    credit: 2 # test credit 2
+    campaign: 1
+    start_date: '2016-04-16'
+    end_date: '2016-04-16'
+    amount: 370
+    comment: 'Test budget 9'
+  model: dash.budgetlineitem
+  pk: 9
+
+- fields:
+    created_dt: '2016-01-01T00:00:07'
+    modified_dt: '2016-01-01T00:00:07'
+    created_by: 1
+    credit: 2 # test credit 2
+    campaign: 1
+    start_date: '2016-04-18'
+    end_date: '2016-04-18'
+    amount: 30
+    comment: 'Test budget 10'
+  model: dash.budgetlineitem
+  pk: 10
+
 
 # Daily statements
 
