--- a/server/requirements_dev.txt
+++ b/server/requirements_dev.txt
@@ -4,8 +4,8 @@ Fabric==1.9.0
 # tests in circle ci
 coverage==3.7.1
 
-# for visualizing project models
-django-extensions==1.3.7
+# for visualizing project models, shell_plus, ipython with app context etc.
+django-extensions==1.6.1
 
 # for detecting slow queries
 django-queryinspect==0.1.0
