Put enable_django_extensions to localsettings temp

--- a/server/server/localsettings.py.template
+++ b/server/server/localsettings.py.template
@@ -197,3 +197,5 @@ BUDGET_RESERVE_FACTOR = 0.05
 # Google Analytics authentication
 GA_CLIENT_EMAIL = ''
 GA_PRIVATE_KEY = ''
+
+ENABLE_DJANGO_EXTENSIONS = True
