--- a/server/server/localsettings.py.template
+++ b/server/server/localsettings.py.template
@@ -6,6 +6,7 @@ from secretcrypt import Secret
 
 # SECURITY WARNING: don't run with debug turned on in production!
 DEBUG = True
+ENABLE_DJANGO_EXTENSIONS = DEBUG
 
 # SECURITY WARNING: keep the secret key used in production secret!
 SECRET_KEY = Secret('plain::=o2)mkphq!igv$*josav@qobg)sz^uw2lorv@)kjcr1yct%q8l').get()
@@ -197,5 +198,3 @@ BUDGET_RESERVE_FACTOR = 0.05
 # Google Analytics authentication
 GA_CLIENT_EMAIL = ''
 GA_PRIVATE_KEY = ''
-
-ENABLE_DJANGO_EXTENSIONS = True
