--- a/server/dash/fixtures/test_account_agency.yaml
+++ b/server/dash/fixtures/test_account_agency.yaml
@@ -198,31 +198,28 @@
         name: AccountSetting for Account 200
         default_account_manager: 1
         default_sales_representative: 2
-        service_fee: 0.2
         created_dt: '2015-09-23T09:57:21'
         created_by: 1
         account: 200
     model: dash.accountsettings
     pk: 200
 
-# one update (service_fee)
--   fields:
-        name: AccountSetting for Account 200
-        default_account_manager: 1
-        default_sales_representative: 2
-        service_fee: 0.1
-        created_dt: '2015-09-23T09:57:22'
-        created_by: 1
-        account: 200
-    model: dash.accountsettings
-    pk: 201
-
-# multiple updates (service_fee, default_sales_representative)
+# one update (default_sales_representative)
 -   fields:
         name: AccountSetting for Account 200
         default_account_manager: 1
         default_sales_representative: 1
-        service_fee: 0.2
+        created_dt: '2015-09-23T09:57:23'
+        created_by: 1
+        account: 200
+    model: dash.accountsettings
+    pk: 202
+
+# multiple updates (default_account_manager, default_sales_representative)
+-   fields:
+        name: AccountSetting for Account 200
+        default_account_manager: 2
+        default_sales_representative: 1
         created_dt: '2015-09-23T09:57:23'
         created_by: 1
         account: 200
@@ -234,7 +231,6 @@
         name: AccountSetting for Account 200
         default_account_manager: 1
         default_sales_representative: 1
-        service_fee: 0.2
         created_dt: '2015-09-23T09:57:24'
         created_by: 1
         account: 200
@@ -246,7 +242,6 @@
         name: AccountSetting for Account 200
         default_account_manager: 1
         default_sales_representative: 1
-        service_fee: 0.2
         created_dt: '2015-09-23T09:57:25'
         created_by: 1
         changes_text: 'some text'
@@ -259,7 +254,6 @@
         name: AccountSetting for Account 200
         default_account_manager: 1
         default_sales_representative: 1
-        service_fee: 0.1
         created_dt: '2015-09-23T09:57:26'
         created_by: 1
         changes_text: 'some text'
@@ -272,7 +266,6 @@
         name: AccountSetting for Account 201
         default_account_manager: 1
         default_sales_representative: 1
-        service_fee: 0.1
         created_dt: '2015-09-23T09:57:22'
         created_by: 1
         account: 201
